apps/whoami/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.12.0
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
      restartPolicy: Always
      automountServiceAccountToken: false
